[project]
name = "beauty-agent"
version = "0.1.0"
description = "美妆智能顾问 Agent — Orchestrator + 4 sub-agents, hybrid retrieval, 4-layer memory"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40.0",
    "chromadb>=0.5.0",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    "sentence-transformers>=3.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
